# basic-engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  codegen.py  hist.py  run.sh  todo.txt
cmake/: FindGLM.cmake
odin/: .gitignore  Cell.object  bingus.object  codegen.py  game.odin  game_object.odin  game_timer.odin  idgen.odin  input.odin  main.odin  odinfmt.json  script.odin  systems.odin  test_bug.py  tetroid  timer.odin  transform.odin
odin/ecs/: components.odin  ecs.odin
odin/rigidbody/: rigidbody.odin
odin/sprite/: sprite.odin
odin/transform/: transform.odin
resources/objects/: BasicObject.object  Camera.object  Cell.object  Circle.object  CircleObject.object  CircleWall.object  ExampleObject.object  Glorbus.object  HasASquare.object  Player.object  Point.object  Seeker.object  Square.object  SquareKinematic.object  Wall.object
resources/scenes/: ExampleScene.scene  Squares.scene
resources/scripts/: Fall.h  InputTest.h  PrintCollisions.h  RandomAngle.h  Reproduce.cpp  Reproduce.h  Scatter.h  Seek.h  Spin.cpp  Spin.h  TestScript.cpp  TestScript.h  VectorField.h  WASDMovement.h  Wiggle.h
src/engine/: AffineTransform.cpp  Camera.cpp  Camera.h  Component.cpp  Component.h  DisplayObject.cpp  DisplayObject.h  ElapsedTimeLogger.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GameTimer.cpp  GameTimer.h  Glorbus.object  IDGenerator.cpp  IDGenerator.h  Input.cpp  Input.h  ObjectPool.h  Script.h  ScriptRunner.cpp  ScriptRunner.h  System.h  TestComponent.h  TestObject.object  WallTime.cpp  WallTime.h
src/engine/components/: Camera.cpp  Collider.h  ExampleComponent.h  Rigidbody.h  Script.h  Sprite.h  TestComponent.h  TestScript.cpp  TestScript.h  Transform.cpp  Transform.h
src/engine/components/colliders/: BoxCollider.h  CircleCollider.h  PolygonCollider.h
src/engine/math/: AffineTransform.h  Circle.cpp  Circle.h  Linmath.h  MathUtils.h  Matrix3.cpp  Matrix3.h  MatrixPool.cpp  MatrixPool.h  MinkowskiDifferenceSupport.cpp  Polygon.cpp  Polygon.h  Random.h  Vector2.cpp  Vector2.h
src/engine/objects/: Glorbus.object  TestObject.object
src/engine/shaders/: fragment.glsl  vertex.glsl
src/engine/systems/: CollisionSystem.cpp  CollisionSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  Renderer.cpp  Renderer.h  ScriptRunner.cpp  ScriptRunner.h
src/main/: main.cpp
