cmake_minimum_required(VERSION 3.7.1)
project(Game)
execute_process(COMMAND "python3 codegen.py" WORKING_DIRECTORY ".")
file(GLOB_RECURSE SRC_FILES "src/*.cpp" "src/*.h" "resources/scripts/*.h" "resources/scripts/*.cpp")
message(STATUS "${SRC_FILES}")
add_executable("${PROJECT_NAME}" ${SRC_FILES})
add_subdirectory("glfw")
target_include_directories("${PROJECT_NAME}" PUBLIC glfw/include)
target_link_libraries("${PROJECT_NAME}" glfw)
SET(SDL2_LINKER_FLAGS COMMAND sdl2-config --libs)
SET(CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} -framework OpenGL -framework GLUT")
SET(CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${SDL2_LINKER_FLAGS}")
